MGMT-15505: assisted-installer-agent 2.9 config

--- a/ci-operator/config/openshift/assisted-installer-agent/openshift-assisted-installer-agent-release-ocm-2.9.yaml
+++ b/ci-operator/config/openshift/assisted-installer-agent/openshift-assisted-installer-agent-release-ocm-2.9.yaml
@@ -1,34 +1,34 @@
 base_images:
   assisted-image-service:
-    name: ocm-2.10
+    name: ocm-2.9
     namespace: edge-infrastructure
     tag: assisted-image-service
   assisted-installer:
-    name: ocm-2.10
+    name: ocm-2.9
     namespace: edge-infrastructure
     tag: assisted-installer
   assisted-installer-controller:
-    name: ocm-2.10
+    name: ocm-2.9
     namespace: edge-infrastructure
     tag: assisted-installer-controller
   assisted-service:
-    name: ocm-2.10
+    name: ocm-2.9
     namespace: edge-infrastructure
     tag: assisted-service
   assisted-service-index:
     name: assisted-service-index
     namespace: edge-infrastructure
-    tag: latest
+    tag: ocm-2.9
   assisted-service-scripts:
-    name: ocm-2.10
+    name: ocm-2.9
     namespace: edge-infrastructure
     tag: assisted-service-scripts
   assisted-test-infra:
-    name: ocm-2.10
+    name: ocm-2.9
     namespace: edge-infrastructure
     tag: assisted-test-infra
   assisted-test-infra-internal:
-    name: ocm-2.10
+    name: ocm-2.9
     namespace: edge-infrastructure
     tag: assisted-test-infra-internal
   coreos-centos-stream8:
@@ -60,7 +60,7 @@ images:
   from: src
   to: assisted-installer-agent-src
 promotion:
-  name: ocm-2.10
+  name: ocm-2.9
   namespace: edge-infrastructure
 releases:
   latest:
@@ -84,7 +84,7 @@ tests:
     cluster_profile: packet-assisted
     env:
       DOCKERFILE_IMAGE_PAIRS: |
-        Dockerfile.assisted_installer_agent , quay.io/edge-infrastructure/assisted-installer-agent-multi:latest
+        Dockerfile.assisted_installer_agent , quay.io/edge-infrastructure/assisted-installer-agent-multi:ocm-2.9
     workflow: assisted-tools-multi-arch
 - as: mirror-nightly-image
   cluster: build01
@@ -145,83 +145,6 @@ tests:
   steps:
     cluster_profile: packet-assisted
     workflow: assisted-agent
-- as: e2e-metal-assisted
-  cluster: build01
-  skip_if_only_changed: ^\.github/|\.md$|^(?:.*/)?(?:\.gitignore|OWNERS|OWNERS_ALIASES|LICENSE)$
-  steps:
-    cluster_profile: packet-assisted
-    workflow: assisted-baremetal
-- as: e2e-metal-assisted-ipv6
-  cluster: build01
-  optional: true
-  steps:
-    cluster_profile: packet-assisted
-    env:
-      ASSISTED_CONFIG: |
-        IPv6=yes
-        IPv4=no
-    workflow: assisted-baremetal
-- as: e2e-metal-assisted-single-node
-  cluster: build01
-  optional: true
-  steps:
-    cluster_profile: packet-assisted
-    env:
-      ASSISTED_CONFIG: |
-        NUM_MASTERS=1
-    workflow: assisted-baremetal
-- as: e2e-metal-assisted-cnv
-  cluster: build01
-  optional: true
-  steps:
-    cluster_profile: packet-assisted
-    env:
-      ASSISTED_CONFIG: |
-        OLM_OPERATORS=cnv
-        OPENSHIFT_VERSION=4.12
-    workflow: assisted-baremetal
-- as: e2e-metal-assisted-lvm
-  cluster: build01
-  optional: true
-  steps:
-    cluster_profile: packet-assisted
-    env:
-      ASSISTED_CONFIG: |
-        OLM_OPERATORS=lvm
-        MASTERS_COUNT=1
-        MASTER_MEMORY=18000
-        MASTER_CPU=9
-    workflow: assisted-baremetal
-- as: e2e-metal-assisted-odf
-  cluster: build01
-  optional: true
-  steps:
-    cluster_profile: packet-assisted
-    env:
-      ASSISTED_CONFIG: |
-        OLM_OPERATORS=odf
-        OPENSHIFT_VERSION=4.12
-      PACKET_PLAN: m3.large.x86
-    workflow: assisted-baremetal
-- as: e2e-metal-assisted-day2
-  cluster: build01
-  optional: true
-  steps:
-    cluster_profile: packet-assisted
-    env:
-      ASSISTED_CONFIG: |
-        TEST_FUNC=test_deploy_day2_nodes_cloud
-    workflow: assisted-baremetal
-- as: e2e-metal-assisted-upgrade-agent
-  cluster: build01
-  optional: true
-  steps:
-    cluster_profile: packet-assisted
-    env:
-      ASSISTED_CONFIG: |
-        TEST=./src/tests/test_upgrade_agent.py
-        TEST_FUNC=test_upgrade_agent
-    workflow: assisted-baremetal
 - as: e2e-ai-operator-ztp
   cluster: build01
   skip_if_only_changed: ^\.github/|\.md$|^(?:.*/)?(?:\.gitignore|OWNERS|OWNERS_ALIASES|LICENSE)$
@@ -232,14 +155,7 @@ tests:
       INDEX_IMAGE: assisted-service-index
       OPENSHIFT_INSTALL_RELEASE_IMAGE: release:latest
     workflow: assisted-baremetal-operator-ztp
-- as: e2e-oci-assisted
-  cluster: build01
-  optional: true
-  steps:
-    cluster_profile: oci-assisted
-    workflow: assisted-oci
 zz_generated_metadata:
-  branch: master
+  branch: release-ocm-2.9
   org: openshift
   repo: assisted-installer-agent
-  variant: edge
