--- a/ci-operator/config/openshift/assisted-installer-agent/openshift-assisted-installer-agent-release-ocm-2.9__mce.yaml
+++ b/ci-operator/config/openshift/assisted-installer-agent/openshift-assisted-installer-agent-release-ocm-2.9__mce.yaml
@@ -19,7 +19,7 @@ images:
       - registry.ci.openshift.org/openshift/release:golang-1.18
   to: assisted-installer-agent
 promotion:
-  name: "2.5"
+  name: "2.4"
   namespace: stolostron
 releases:
   latest:
@@ -44,11 +44,11 @@ tests:
         OSCI_PUBLISH_DELAY=0
         OSCI_PIPELINE_PRODUCT_PREFIX=backplane
         OSCI_PIPELINE_REPO=backplane-pipeline
-        OSCI_RELEASE_BRANCH=backplane-2.5
-      RELEASE_REF: backplane-2.5
+        OSCI_RELEASE_BRANCH=backplane-2.4
+      RELEASE_REF: backplane-2.4
     workflow: ocm-ci-manifest-update
 zz_generated_metadata:
-  branch: master
+  branch: release-ocm-2.9
   org: openshift
   repo: assisted-installer-agent
   variant: mce
