--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -58,10 +58,6 @@ resources:
 tests:
 - as: integration
   steps:
-    env:
-      MYSQL_DATABASE: test
-      MYSQL_PASSWORD: zaphod
-      MYSQL_USER: test
     test:
     - as: testdb
       commands: |
@@ -71,6 +67,13 @@ tests:
         requests:
           cpu: 100m
           memory: 200Mi
+    env:
+      - name: MYSQL_DATABASE
+        default: test
+      - name: MYSQL_PASSWORD
+        default: zaphod
+      - name: MYSQL_DATABASE
+        default: database
 zz_generated_metadata:
   branch: release-next
   org: securesign
