--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -61,19 +61,15 @@ tests:
     test:
     - as: testdb
       commands: |
+        MYSQL_PASSWORD=zaphod
+        MYSQL_USER=test
+        MYSQL_DATABASE=test
         mysql -ptest -uzaphod -h 127.0.0.1 -P3306 -e 'exit'
       from: trilliandb
       resources:
         requests:
           cpu: 100m
           memory: 200Mi
-    env:
-      - name: MYSQL_DATABASE
-        default: test
-      - name: MYSQL_PASSWORD
-        default: zaphod
-      - name: MYSQL_DATABASE
-        default: database
 zz_generated_metadata:
   branch: release-next
   org: securesign
