--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -64,7 +64,7 @@ tests:
         MYSQL_PASSWORD=zaphod
         MYSQL_USER=test
         MYSQL_DATABASE=test
-        mysql -ptest -uzaphod -h 127.0.0.1 -P3306 -e 'exit'
+        mysql -utest -pzaphod -h 127.0.0.1 -P3306 -e 'exit'
       from: trilliandb
       resources:
         requests:
