--- a/ci-operator/config/rhoar-qe/spring-boot-openshift-interop-tests/rhoar-qe-spring-boot-openshift-interop-tests-main__springboot-ocp4.14-lp-interop.yaml
+++ b/ci-operator/config/rhoar-qe/spring-boot-openshift-interop-tests/rhoar-qe-spring-boot-openshift-interop-tests-main__springboot-ocp4.14-lp-interop.yaml
@@ -11,6 +11,11 @@ build_root:
 images:
 - context_dir: .
   dockerfile_path: Dockerfile
+  inputs:
+    cli:
+      paths:
+      - destination_dir: oc
+        source_path: /usr/bin/oc
   to: springboot-runner
 releases:
   latest:
