--- a/ci-operator/jobs/openshift/assisted-service/openshift-assisted-service-release-ocm-2.9-periodics.yaml
+++ b/ci-operator/jobs/openshift/assisted-service/openshift-assisted-service-release-ocm-2.9-periodics.yaml
@@ -1,20 +1,19 @@
 periodics:
 - agent: kubernetes
-  cluster: build05
-  cron: 45 04 */1 * 0-5
+  cluster: build01
+  cron: 00 00 */1 * 0-5
   decorate: true
-  decoration_config:
-    skip_cloning: true
   extra_refs:
-  - base_ref: release-ocm-2.6
+  - base_ref: release-ocm-2.9
     org: openshift
     repo: assisted-service
   labels:
     ci-operator.openshift.io/cloud: packet-edge
     ci-operator.openshift.io/cloud-cluster-profile: packet-assisted
     ci.openshift.io/generator: prowgen
+    job-release: "4.14"
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-openshift-assisted-service-release-ocm-2.6-e2e-ai-operator-ztp-3masters-periodic
+  name: periodic-ci-openshift-assisted-service-release-ocm-2.9-e2e-ai-operator-ztp-3masters-periodic
   spec:
     containers:
     - args:
@@ -72,21 +71,91 @@ periodics:
       secret:
         secretName: result-aggregator
 - agent: kubernetes
-  cluster: build05
-  cron: 50 04 */1 * 0-5
+  cluster: build01
+  cron: 25 00 */1 * 0-5
   decorate: true
-  decoration_config:
-    skip_cloning: true
   extra_refs:
-  - base_ref: release-ocm-2.6
+  - base_ref: release-ocm-2.9
     org: openshift
     repo: assisted-service
   labels:
     ci-operator.openshift.io/cloud: packet-edge
     ci-operator.openshift.io/cloud-cluster-profile: packet-assisted
     ci.openshift.io/generator: prowgen
+    job-release: "4.14"
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-openshift-assisted-service-release-ocm-2.6-e2e-ai-operator-ztp-disconnected-periodic
+  name: periodic-ci-openshift-assisted-service-release-ocm-2.9-e2e-ai-operator-ztp-capi-periodic
+  spec:
+    containers:
+    - args:
+      - --gcs-upload-secret=/secrets/gcs/service-account.json
+      - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
+      - --lease-server-credentials-file=/etc/boskos/credentials
+      - --report-credentials-file=/etc/report/credentials
+      - --secret-dir=/secrets/ci-pull-credentials
+      - --secret-dir=/usr/local/e2e-ai-operator-ztp-capi-periodic-cluster-profile
+      - --target=e2e-ai-operator-ztp-capi-periodic
+      command:
+      - ci-operator
+      image: ci-operator:latest
+      imagePullPolicy: Always
+      name: ""
+      resources:
+        requests:
+          cpu: 10m
+      volumeMounts:
+      - mountPath: /etc/boskos
+        name: boskos
+        readOnly: true
+      - mountPath: /secrets/ci-pull-credentials
+        name: ci-pull-credentials
+        readOnly: true
+      - mountPath: /usr/local/e2e-ai-operator-ztp-capi-periodic-cluster-profile
+        name: cluster-profile
+      - mountPath: /secrets/gcs
+        name: gcs-credentials
+        readOnly: true
+      - mountPath: /etc/pull-secret
+        name: pull-secret
+        readOnly: true
+      - mountPath: /etc/report
+        name: result-aggregator
+        readOnly: true
+    serviceAccountName: ci-operator
+    volumes:
+    - name: boskos
+      secret:
+        items:
+        - key: credentials
+          path: credentials
+        secretName: boskos-credentials
+    - name: ci-pull-credentials
+      secret:
+        secretName: ci-pull-credentials
+    - name: cluster-profile
+      secret:
+        secretName: cluster-secrets-packet-assisted
+    - name: pull-secret
+      secret:
+        secretName: registry-pull-credentials
+    - name: result-aggregator
+      secret:
+        secretName: result-aggregator
+- agent: kubernetes
+  cluster: build01
+  cron: 00 00 */1 * 0-5
+  decorate: true
+  extra_refs:
+  - base_ref: release-ocm-2.9
+    org: openshift
+    repo: assisted-service
+  labels:
+    ci-operator.openshift.io/cloud: packet-edge
+    ci-operator.openshift.io/cloud-cluster-profile: packet-assisted
+    ci.openshift.io/generator: prowgen
+    job-release: "4.14"
+    pj-rehearse.openshift.io/can-be-rehearsed: "true"
+  name: periodic-ci-openshift-assisted-service-release-ocm-2.9-e2e-ai-operator-ztp-disconnected-periodic
   spec:
     containers:
     - args:
@@ -144,21 +213,162 @@ periodics:
       secret:
         secretName: result-aggregator
 - agent: kubernetes
-  cluster: build05
-  cron: 25 04 */1 * 0-5
+  cluster: build01
+  cron: 00 02 */1 * 1-4
   decorate: true
-  decoration_config:
-    skip_cloning: true
   extra_refs:
-  - base_ref: release-ocm-2.6
+  - base_ref: release-ocm-2.9
     org: openshift
     repo: assisted-service
   labels:
     ci-operator.openshift.io/cloud: packet-edge
     ci-operator.openshift.io/cloud-cluster-profile: packet-assisted
     ci.openshift.io/generator: prowgen
+    job-release: "4.14"
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-openshift-assisted-service-release-ocm-2.6-e2e-ai-operator-ztp-periodic
+  name: periodic-ci-openshift-assisted-service-release-ocm-2.9-e2e-ai-operator-ztp-hypershift-zero-nodes-periodic
+  spec:
+    containers:
+    - args:
+      - --gcs-upload-secret=/secrets/gcs/service-account.json
+      - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
+      - --lease-server-credentials-file=/etc/boskos/credentials
+      - --report-credentials-file=/etc/report/credentials
+      - --secret-dir=/secrets/ci-pull-credentials
+      - --secret-dir=/usr/local/e2e-ai-operator-ztp-hypershift-zero-nodes-periodic-cluster-profile
+      - --target=e2e-ai-operator-ztp-hypershift-zero-nodes-periodic
+      command:
+      - ci-operator
+      image: ci-operator:latest
+      imagePullPolicy: Always
+      name: ""
+      resources:
+        requests:
+          cpu: 10m
+      volumeMounts:
+      - mountPath: /etc/boskos
+        name: boskos
+        readOnly: true
+      - mountPath: /secrets/ci-pull-credentials
+        name: ci-pull-credentials
+        readOnly: true
+      - mountPath: /usr/local/e2e-ai-operator-ztp-hypershift-zero-nodes-periodic-cluster-profile
+        name: cluster-profile
+      - mountPath: /secrets/gcs
+        name: gcs-credentials
+        readOnly: true
+      - mountPath: /etc/pull-secret
+        name: pull-secret
+        readOnly: true
+      - mountPath: /etc/report
+        name: result-aggregator
+        readOnly: true
+    serviceAccountName: ci-operator
+    volumes:
+    - name: boskos
+      secret:
+        items:
+        - key: credentials
+          path: credentials
+        secretName: boskos-credentials
+    - name: ci-pull-credentials
+      secret:
+        secretName: ci-pull-credentials
+    - name: cluster-profile
+      secret:
+        secretName: cluster-secrets-packet-assisted
+    - name: pull-secret
+      secret:
+        secretName: registry-pull-credentials
+    - name: result-aggregator
+      secret:
+        secretName: result-aggregator
+- agent: kubernetes
+  cluster: build01
+  cron: 50 00 */1 * 0-5
+  decorate: true
+  extra_refs:
+  - base_ref: release-ocm-2.9
+    org: openshift
+    repo: assisted-service
+  labels:
+    ci-operator.openshift.io/cloud: packet-edge
+    ci-operator.openshift.io/cloud-cluster-profile: packet-assisted
+    ci.openshift.io/generator: prowgen
+    job-release: "4.14"
+    pj-rehearse.openshift.io/can-be-rehearsed: "true"
+  name: periodic-ci-openshift-assisted-service-release-ocm-2.9-e2e-ai-operator-ztp-node-labels-periodic
+  spec:
+    containers:
+    - args:
+      - --gcs-upload-secret=/secrets/gcs/service-account.json
+      - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
+      - --lease-server-credentials-file=/etc/boskos/credentials
+      - --report-credentials-file=/etc/report/credentials
+      - --secret-dir=/secrets/ci-pull-credentials
+      - --secret-dir=/usr/local/e2e-ai-operator-ztp-node-labels-periodic-cluster-profile
+      - --target=e2e-ai-operator-ztp-node-labels-periodic
+      command:
+      - ci-operator
+      image: ci-operator:latest
+      imagePullPolicy: Always
+      name: ""
+      resources:
+        requests:
+          cpu: 10m
+      volumeMounts:
+      - mountPath: /etc/boskos
+        name: boskos
+        readOnly: true
+      - mountPath: /secrets/ci-pull-credentials
+        name: ci-pull-credentials
+        readOnly: true
+      - mountPath: /usr/local/e2e-ai-operator-ztp-node-labels-periodic-cluster-profile
+        name: cluster-profile
+      - mountPath: /secrets/gcs
+        name: gcs-credentials
+        readOnly: true
+      - mountPath: /etc/pull-secret
+        name: pull-secret
+        readOnly: true
+      - mountPath: /etc/report
+        name: result-aggregator
+        readOnly: true
+    serviceAccountName: ci-operator
+    volumes:
+    - name: boskos
+      secret:
+        items:
+        - key: credentials
+          path: credentials
+        secretName: boskos-credentials
+    - name: ci-pull-credentials
+      secret:
+        secretName: ci-pull-credentials
+    - name: cluster-profile
+      secret:
+        secretName: cluster-secrets-packet-assisted
+    - name: pull-secret
+      secret:
+        secretName: registry-pull-credentials
+    - name: result-aggregator
+      secret:
+        secretName: result-aggregator
+- agent: kubernetes
+  cluster: build01
+  cron: 00 00 */1 * 0-5
+  decorate: true
+  extra_refs:
+  - base_ref: release-ocm-2.9
+    org: openshift
+    repo: assisted-service
+  labels:
+    ci-operator.openshift.io/cloud: packet-edge
+    ci-operator.openshift.io/cloud-cluster-profile: packet-assisted
+    ci.openshift.io/generator: prowgen
+    job-release: "4.14"
+    pj-rehearse.openshift.io/can-be-rehearsed: "true"
+  name: periodic-ci-openshift-assisted-service-release-ocm-2.9-e2e-ai-operator-ztp-periodic
   spec:
     containers:
     - args:
@@ -216,21 +426,91 @@ periodics:
       secret:
         secretName: result-aggregator
 - agent: kubernetes
-  cluster: build05
-  cron: 25 05 */1 * 0-5
+  cluster: build01
+  cron: 45 02 */1 * 0-5
   decorate: true
-  decoration_config:
-    skip_cloning: true
   extra_refs:
-  - base_ref: release-ocm-2.6
+  - base_ref: release-ocm-2.9
     org: openshift
     repo: assisted-service
   labels:
     ci-operator.openshift.io/cloud: packet-edge
     ci-operator.openshift.io/cloud-cluster-profile: packet-assisted
     ci.openshift.io/generator: prowgen
+    job-release: "4.14"
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-openshift-assisted-service-release-ocm-2.6-e2e-ai-operator-ztp-sno-day2-workers-late-binding-periodic
+  name: periodic-ci-openshift-assisted-service-release-ocm-2.9-e2e-ai-operator-ztp-remove-node-periodic
+  spec:
+    containers:
+    - args:
+      - --gcs-upload-secret=/secrets/gcs/service-account.json
+      - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
+      - --lease-server-credentials-file=/etc/boskos/credentials
+      - --report-credentials-file=/etc/report/credentials
+      - --secret-dir=/secrets/ci-pull-credentials
+      - --secret-dir=/usr/local/e2e-ai-operator-ztp-remove-node-periodic-cluster-profile
+      - --target=e2e-ai-operator-ztp-remove-node-periodic
+      command:
+      - ci-operator
+      image: ci-operator:latest
+      imagePullPolicy: Always
+      name: ""
+      resources:
+        requests:
+          cpu: 10m
+      volumeMounts:
+      - mountPath: /etc/boskos
+        name: boskos
+        readOnly: true
+      - mountPath: /secrets/ci-pull-credentials
+        name: ci-pull-credentials
+        readOnly: true
+      - mountPath: /usr/local/e2e-ai-operator-ztp-remove-node-periodic-cluster-profile
+        name: cluster-profile
+      - mountPath: /secrets/gcs
+        name: gcs-credentials
+        readOnly: true
+      - mountPath: /etc/pull-secret
+        name: pull-secret
+        readOnly: true
+      - mountPath: /etc/report
+        name: result-aggregator
+        readOnly: true
+    serviceAccountName: ci-operator
+    volumes:
+    - name: boskos
+      secret:
+        items:
+        - key: credentials
+          path: credentials
+        secretName: boskos-credentials
+    - name: ci-pull-credentials
+      secret:
+        secretName: ci-pull-credentials
+    - name: cluster-profile
+      secret:
+        secretName: cluster-secrets-packet-assisted
+    - name: pull-secret
+      secret:
+        secretName: registry-pull-credentials
+    - name: result-aggregator
+      secret:
+        secretName: result-aggregator
+- agent: kubernetes
+  cluster: build01
+  cron: 25 00 */1 * 0-5
+  decorate: true
+  extra_refs:
+  - base_ref: release-ocm-2.9
+    org: openshift
+    repo: assisted-service
+  labels:
+    ci-operator.openshift.io/cloud: packet-edge
+    ci-operator.openshift.io/cloud-cluster-profile: packet-assisted
+    ci.openshift.io/generator: prowgen
+    job-release: "4.14"
+    pj-rehearse.openshift.io/can-be-rehearsed: "true"
+  name: periodic-ci-openshift-assisted-service-release-ocm-2.9-e2e-ai-operator-ztp-sno-day2-workers-late-binding-periodic
   spec:
     containers:
     - args:
@@ -288,21 +568,20 @@ periodics:
       secret:
         secretName: result-aggregator
 - agent: kubernetes
-  cluster: build05
-  cron: 05 05 */1 * 0-5
+  cluster: build01
+  cron: 05 00 */1 * 0-5
   decorate: true
-  decoration_config:
-    skip_cloning: true
   extra_refs:
-  - base_ref: release-ocm-2.6
+  - base_ref: release-ocm-2.9
     org: openshift
     repo: assisted-service
   labels:
     ci-operator.openshift.io/cloud: packet-edge
     ci-operator.openshift.io/cloud-cluster-profile: packet-assisted
     ci.openshift.io/generator: prowgen
+    job-release: "4.14"
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-openshift-assisted-service-release-ocm-2.6-e2e-ai-operator-ztp-sno-day2-workers-periodic
+  name: periodic-ci-openshift-assisted-service-release-ocm-2.9-e2e-ai-operator-ztp-sno-day2-workers-periodic
   spec:
     containers:
     - args:
@@ -360,19 +639,89 @@ periodics:
       secret:
         secretName: result-aggregator
 - agent: kubernetes
-  cluster: build05
-  cron: 20 0 * * *
+  cluster: build01
+  cron: 25 02 */1 * 0-5
   decorate: true
-  decoration_config:
-    skip_cloning: true
   extra_refs:
-  - base_ref: release-ocm-2.6
+  - base_ref: release-ocm-2.9
+    org: openshift
+    repo: assisted-service
+  labels:
+    ci-operator.openshift.io/cloud: packet-edge
+    ci-operator.openshift.io/cloud-cluster-profile: packet-assisted
+    ci.openshift.io/generator: prowgen
+    job-release: "4.14"
+    pj-rehearse.openshift.io/can-be-rehearsed: "true"
+  name: periodic-ci-openshift-assisted-service-release-ocm-2.9-e2e-metal-assisted-kube-api-late-binding-single-node-periodic
+  spec:
+    containers:
+    - args:
+      - --gcs-upload-secret=/secrets/gcs/service-account.json
+      - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
+      - --lease-server-credentials-file=/etc/boskos/credentials
+      - --report-credentials-file=/etc/report/credentials
+      - --secret-dir=/secrets/ci-pull-credentials
+      - --secret-dir=/usr/local/e2e-metal-assisted-kube-api-late-binding-single-node-periodic-cluster-profile
+      - --target=e2e-metal-assisted-kube-api-late-binding-single-node-periodic
+      command:
+      - ci-operator
+      image: ci-operator:latest
+      imagePullPolicy: Always
+      name: ""
+      resources:
+        requests:
+          cpu: 10m
+      volumeMounts:
+      - mountPath: /etc/boskos
+        name: boskos
+        readOnly: true
+      - mountPath: /secrets/ci-pull-credentials
+        name: ci-pull-credentials
+        readOnly: true
+      - mountPath: /usr/local/e2e-metal-assisted-kube-api-late-binding-single-node-periodic-cluster-profile
+        name: cluster-profile
+      - mountPath: /secrets/gcs
+        name: gcs-credentials
+        readOnly: true
+      - mountPath: /etc/pull-secret
+        name: pull-secret
+        readOnly: true
+      - mountPath: /etc/report
+        name: result-aggregator
+        readOnly: true
+    serviceAccountName: ci-operator
+    volumes:
+    - name: boskos
+      secret:
+        items:
+        - key: credentials
+          path: credentials
+        secretName: boskos-credentials
+    - name: ci-pull-credentials
+      secret:
+        secretName: ci-pull-credentials
+    - name: cluster-profile
+      secret:
+        secretName: cluster-secrets-packet-assisted
+    - name: pull-secret
+      secret:
+        secretName: registry-pull-credentials
+    - name: result-aggregator
+      secret:
+        secretName: result-aggregator
+- agent: kubernetes
+  cluster: build01
+  cron: 5 3 * * *
+  decorate: true
+  extra_refs:
+  - base_ref: release-ocm-2.9
     org: openshift
     repo: assisted-service
   labels:
     ci.openshift.io/generator: prowgen
+    job-release: "4.14"
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-openshift-assisted-service-release-ocm-2.6-mirror-nightly-image
+  name: periodic-ci-openshift-assisted-service-release-ocm-2.9-mirror-nightly-image
   spec:
     containers:
     - args:
@@ -414,19 +763,18 @@ periodics:
       secret:
         secretName: result-aggregator
 - agent: kubernetes
-  cluster: build05
+  cluster: build01
   cron: 00 00 */1 * 0-5
   decorate: true
-  decoration_config:
-    skip_cloning: true
   extra_refs:
-  - base_ref: release-ocm-2.6
+  - base_ref: release-ocm-2.9
     org: openshift
     repo: assisted-service
   labels:
     ci.openshift.io/generator: prowgen
+    job-release: "4.14"
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-openshift-assisted-service-release-ocm-2.6-subsystem-aws-periodic
+  name: periodic-ci-openshift-assisted-service-release-ocm-2.9-subsystem-aws-periodic
   spec:
     containers:
     - args:
@@ -475,19 +823,18 @@ periodics:
       secret:
         secretName: result-aggregator
 - agent: kubernetes
-  cluster: build05
+  cluster: build01
   cron: 00 00 */1 * 0-5
   decorate: true
-  decoration_config:
-    skip_cloning: true
   extra_refs:
-  - base_ref: release-ocm-2.6
+  - base_ref: release-ocm-2.9
     org: openshift
     repo: assisted-service
   labels:
     ci.openshift.io/generator: prowgen
+    job-release: "4.14"
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-openshift-assisted-service-release-ocm-2.6-subsystem-kubeapi-aws-periodic
+  name: periodic-ci-openshift-assisted-service-release-ocm-2.9-subsystem-kubeapi-aws-periodic
   spec:
     containers:
     - args:
