--- a/ci-operator/step-registry/openshift-qe/ocp-qe-perfscale-ci-tests/openshift-qe-ocp-qe-perfscale-ci-tests-chain.yaml
+++ b/ci-operator/step-registry/openshift-qe/ocp-qe-perfscale-ci-tests/openshift-qe-ocp-qe-perfscale-ci-tests-chain.yaml
@@ -5,5 +5,6 @@ chain:
   - chain: openshift-qe-kube-burner-smoke
   - chain: openshift-qe-cluster-density-v2
   - chain: openshift-qe-node-density
+  - chain: openshift-qe-concurrent-builds
   documentation: |-
     This chain executes cluster density v2, node density, cluster-density smoketest workloads.
