--- a/ci-operator/config/openshift/assisted-installer-agent/openshift-assisted-installer-agent-release-ocm-2.9.yaml
+++ b/ci-operator/config/openshift/assisted-installer-agent/openshift-assisted-installer-agent-release-ocm-2.9.yaml
@@ -92,6 +92,8 @@ tests:
   steps:
     dependencies:
       SOURCE_IMAGE_REF: assisted-installer-agent
+    env:
+      RELEASE_TAG_PREFIX: ocm-2.9
     test:
     - ref: assisted-baremetal-images-publish
 - as: mirror-vcsref-image
@@ -100,6 +102,8 @@ tests:
   steps:
     dependencies:
       SOURCE_IMAGE_REF: assisted-installer-agent
+    env:
+      RELEASE_TAG_PREFIX: ocm-2.9
     test:
     - ref: assisted-baremetal-images-publish
 - as: lint
