Add gathering kdump step to powervs provision and deprovision

--- a/ci-operator/step-registry/ipi/powervs/pre/ipi-powervs-pre-chain.yaml
+++ b/ci-operator/step-registry/ipi/powervs/pre/ipi-powervs-pre-chain.yaml
@@ -2,6 +2,7 @@ chain:
   as: ipi-powervs-pre
   steps:
   - chain: ipi-conf-powervs
+  - ref: ipi-conf-realtime-kdump-configure-logs
   - chain: ipi-install-powervs
   documentation: |-
     The IPI setup step contains all steps that provision an OpenShift cluster
