Change installation namespace for gitops operator
Signed-off-by: varshab1210 <varshab1210@gmail.com>

--- a/ci-operator/config/redhat-developer/gitops-operator/redhat-developer-gitops-operator-master__v4.14.yaml
+++ b/ci-operator/config/redhat-developer/gitops-operator/redhat-developer-gitops-operator-master__v4.14.yaml
@@ -49,17 +49,29 @@ resources:
       memory: 6Gi
 tests:
 - as: kuttl-sequential
+  cluster_claim:
+    architecture: amd64
+    cloud: aws
+    owner: openshift-ci
+    product: ocp
+    timeout: 1h0m0s
+    version: "4.14"
   skip_if_only_changed: ^docs/|\.(md|adoc)$|^(README|LICENSE|OWNERS)$
   steps:
-    cluster_profile: aws
+    env:
+      INSTALL_NAMESPACE: openshift-gitops-operator
     test:
     - as: install
       cli: latest
-      commands: "operator-sdk run bundle -n openshift-operators \"$OO_BUNDLE\"\noc
-        get pods -n openshift-operators \n"
+      commands: |
+        oc create namespace "$INSTALL_NAMESPACE"
+        operator-sdk run bundle -n "$INSTALL_NAMESPACE" "$OO_BUNDLE"
+        oc wait --for condition=Available -n "$INSTALL_NAMESPACE" deployment openshift-gitops-operator-controller-manager
       dependencies:
       - env: OO_BUNDLE
         name: gitops-operator-bundle
+      env:
+      - name: INSTALL_NAMESPACE
       from: operator-sdk
       resources:
         requests:
@@ -74,19 +86,31 @@ tests:
         requests:
           cpu: "2"
           memory: 6Gi
-    workflow: ipi-aws
+    workflow: generic-claim
 - as: kuttl-parallel
+  cluster_claim:
+    architecture: amd64
+    cloud: aws
+    owner: openshift-ci
+    product: ocp
+    timeout: 1h0m0s
+    version: "4.14"
   skip_if_only_changed: ^docs/|\.(md|adoc)$|^(README|LICENSE|OWNERS)$
   steps:
-    cluster_profile: aws
+    env:
+      INSTALL_NAMESPACE: openshift-gitops-operator
     test:
     - as: install
       cli: latest
-      commands: "operator-sdk run bundle -n openshift-operators \"$OO_BUNDLE\"\noc
-        get pods -n openshift-operators \n"
+      commands: |
+        oc create namespace "$INSTALL_NAMESPACE"
+        operator-sdk run bundle -n "$INSTALL_NAMESPACE" "$OO_BUNDLE"
+        oc wait --for condition=Available -n "$INSTALL_NAMESPACE" deployment openshift-gitops-operator-controller-manager
       dependencies:
       - env: OO_BUNDLE
         name: gitops-operator-bundle
+      env:
+      - name: INSTALL_NAMESPACE
       from: operator-sdk
       resources:
         requests:
@@ -101,7 +125,7 @@ tests:
         requests:
           cpu: "2"
           memory: 6Gi
-    workflow: ipi-aws
+    workflow: generic-claim
 - as: e2e
   skip_if_only_changed: ^docs/|\.(md|adoc)$|^(README|LICENSE|OWNERS)$
   steps:
@@ -116,17 +140,29 @@ tests:
           memory: 6Gi
     workflow: ipi-aws
 - as: periodic-kuttl-sequential
+  cluster_claim:
+    architecture: amd64
+    cloud: aws
+    owner: openshift-ci
+    product: ocp
+    timeout: 1h0m0s
+    version: "4.14"
   cron: 0 0 * * *
   steps:
-    cluster_profile: aws
+    env:
+      INSTALL_NAMESPACE: openshift-gitops-operator
     test:
     - as: install
       cli: latest
-      commands: "operator-sdk run bundle -n openshift-operators \"$OO_BUNDLE\"\noc
-        get pods -n openshift-operators \n"
+      commands: |
+        oc create namespace "$INSTALL_NAMESPACE"
+        operator-sdk run bundle -n "$INSTALL_NAMESPACE" "$OO_BUNDLE"
+        oc wait --for condition=Available -n "$INSTALL_NAMESPACE" deployment openshift-gitops-operator-controller-manager
       dependencies:
       - env: OO_BUNDLE
         name: gitops-operator-bundle
+      env:
+      - name: INSTALL_NAMESPACE
       from: operator-sdk
       resources:
         requests:
@@ -141,19 +177,31 @@ tests:
         requests:
           cpu: "2"
           memory: 6Gi
-    workflow: ipi-aws
+    workflow: generic-claim
 - as: periodic-kuttl-parallel
+  cluster_claim:
+    architecture: amd64
+    cloud: aws
+    owner: openshift-ci
+    product: ocp
+    timeout: 1h0m0s
+    version: "4.14"
   cron: 0 0 * * *
   steps:
-    cluster_profile: aws
+    env:
+      INSTALL_NAMESPACE: openshift-gitops-operator
     test:
     - as: install
       cli: latest
-      commands: "operator-sdk run bundle -n openshift-operators \"$OO_BUNDLE\"\noc
-        get pods -n openshift-operators \n"
+      commands: |
+        oc create namespace "$INSTALL_NAMESPACE"
+        operator-sdk run bundle -n "$INSTALL_NAMESPACE" "$OO_BUNDLE"
+        oc wait --for condition=Available -n "$INSTALL_NAMESPACE" deployment openshift-gitops-operator-controller-manager
       dependencies:
       - env: OO_BUNDLE
         name: gitops-operator-bundle
+      env:
+      - name: INSTALL_NAMESPACE
       from: operator-sdk
       resources:
         requests:
@@ -168,7 +216,7 @@ tests:
         requests:
           cpu: "2"
           memory: 6Gi
-    workflow: ipi-aws
+    workflow: generic-claim
 zz_generated_metadata:
   branch: master
   org: redhat-developer
