Ensuring database is started

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -27,6 +27,8 @@ images:
     ENV MYSQL_DATABASE=test
     ENV mysql_flags="-pzaphod -utest"
     USER 27
+    ENTRYPOINT ["container-entrypoint"]
+    CMD ["run-mysqld"]
   inputs:
     openshift_release_golang-1.19:
       as:
