--- a/ci-operator/config/redhat-developer/gitops-operator/redhat-developer-gitops-operator-master__v4.14.yaml
+++ b/ci-operator/config/redhat-developer/gitops-operator/redhat-developer-gitops-operator-master__v4.14.yaml
@@ -49,13 +49,6 @@ resources:
       memory: 6Gi
 tests:
 - as: kuttl-sequential
-  cluster_claim:
-    architecture: amd64
-    cloud: aws
-    owner: openshift-ci
-    product: ocp
-    timeout: 1h0m0s
-    version: "4.14"
   skip_if_only_changed: ^docs/|\.(md|adoc)$|^(README|LICENSE|OWNERS)$
   steps:
     env:
@@ -86,15 +79,8 @@ tests:
         requests:
           cpu: "2"
           memory: 6Gi
-    workflow: generic-claim
+    workflow: ipi-aws
 - as: kuttl-parallel
-  cluster_claim:
-    architecture: amd64
-    cloud: aws
-    owner: openshift-ci
-    product: ocp
-    timeout: 1h0m0s
-    version: "4.14"
   skip_if_only_changed: ^docs/|\.(md|adoc)$|^(README|LICENSE|OWNERS)$
   steps:
     env:
@@ -125,7 +111,7 @@ tests:
         requests:
           cpu: "2"
           memory: 6Gi
-    workflow: generic-claim
+    workflow: ipi-aws
 - as: e2e
   skip_if_only_changed: ^docs/|\.(md|adoc)$|^(README|LICENSE|OWNERS)$
   steps:
@@ -140,13 +126,6 @@ tests:
           memory: 6Gi
     workflow: ipi-aws
 - as: periodic-kuttl-sequential
-  cluster_claim:
-    architecture: amd64
-    cloud: aws
-    owner: openshift-ci
-    product: ocp
-    timeout: 1h0m0s
-    version: "4.14"
   cron: 0 0 * * *
   steps:
     env:
@@ -177,15 +156,8 @@ tests:
         requests:
           cpu: "2"
           memory: 6Gi
-    workflow: generic-claim
+    workflow: ipi-aws
 - as: periodic-kuttl-parallel
-  cluster_claim:
-    architecture: amd64
-    cloud: aws
-    owner: openshift-ci
-    product: ocp
-    timeout: 1h0m0s
-    version: "4.14"
   cron: 0 0 * * *
   steps:
     env:
@@ -216,7 +188,7 @@ tests:
         requests:
           cpu: "2"
           memory: 6Gi
-    workflow: generic-claim
+    workflow: ipi-aws
 zz_generated_metadata:
   branch: master
   org: redhat-developer
