Testing dockerfile changes in my fork

--- a/ci-operator/config/calebevans/spring-boot-openshift-interop-tests/calebevans-spring-boot-openshift-interop-tests-dockerfile-update__springboot-ocp4.14-lp-interop.yaml
+++ b/ci-operator/config/calebevans/spring-boot-openshift-interop-tests/calebevans-spring-boot-openshift-interop-tests-dockerfile-update__springboot-ocp4.14-lp-interop.yaml
@@ -14,7 +14,7 @@ images:
   inputs:
     cli:
       paths:
-      - destination_dir: oc
+      - destination_dir: usr/bin/oc
         source_path: /usr/bin/oc
   to: springboot-runner
 releases:
@@ -40,7 +40,7 @@ tests:
     - ref: springboot-tests-interop
     workflow: ipi-aws
 zz_generated_metadata:
-  branch: main
-  org: rhoar-qe
+  branch: dockerfile-update
+  org: calebevans
   repo: spring-boot-openshift-interop-tests
   variant: springboot-ocp4.14-lp-interop
