--- a/ci-operator/jobs/calebevans/spring-boot-openshift-interop-tests/calebevans-spring-boot-openshift-interop-tests-dockerfile-update-periodics.yaml
+++ b/ci-operator/jobs/calebevans/spring-boot-openshift-interop-tests/calebevans-spring-boot-openshift-interop-tests-dockerfile-update-periodics.yaml
@@ -6,8 +6,8 @@ periodics:
   decoration_config:
     skip_cloning: true
   extra_refs:
-  - base_ref: main
-    org: rhoar-qe
+  - base_ref: dockerfile-update
+    org: calebevans
     repo: spring-boot-openshift-interop-tests
   labels:
     ci-operator.openshift.io/cloud: aws
@@ -16,18 +16,7 @@ periodics:
     ci.openshift.io/generator: prowgen
     job-release: "4.13"
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-rhoar-qe-spring-boot-openshift-interop-tests-main-springboot-ocp4.14-lp-interop-springboot-interop-aws
-  reporter_config:
-    slack:
-      channel: '#springboot-interop'
-      job_states_to_report:
-      - success
-      - failure
-      - error
-      report_template: '{{if eq .Status.State "success"}} :slack-green: Job *{{.Spec.Job}}*
-        ended with *{{.Status.State}}*. <{{.Status.URL}}|View logs> {{else}} :failed:
-        Job *{{.Spec.Job}}* ended with *{{.Status.State}}*. <{{.Status.URL}}|View
-        logs> {{end}}'
+  name: periodic-ci-calebevans-spring-boot-openshift-interop-tests-dockerfile-update-springboot-ocp4.14-lp-interop-springboot-interop-aws
   spec:
     containers:
     - args:
