--- a/ci-operator/jobs/calebevans/spring-boot-openshift-interop-tests/calebevans-spring-boot-openshift-interop-tests-dockerfile-update-presubmits.yaml
+++ b/ci-operator/jobs/calebevans/spring-boot-openshift-interop-tests/calebevans-spring-boot-openshift-interop-tests-dockerfile-update-presubmits.yaml
@@ -1,10 +1,10 @@
 presubmits:
-  rhoar-qe/spring-boot-openshift-interop-tests:
+  calebevans/spring-boot-openshift-interop-tests:
   - agent: kubernetes
     always_run: true
     branches:
-    - ^main$
-    - ^main-
+    - ^dockerfile-update$
+    - ^dockerfile-update-
     cluster: build01
     context: ci/prow/springboot-ocp4.14-lp-interop-images
     decorate: true
@@ -15,7 +15,7 @@ presubmits:
       ci.openshift.io/generator: prowgen
       job-release: "4.13"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-rhoar-qe-spring-boot-openshift-interop-tests-main-springboot-ocp4.14-lp-interop-images
+    name: pull-ci-calebevans-spring-boot-openshift-interop-tests-dockerfile-update-springboot-ocp4.14-lp-interop-images
     rerun_command: /test springboot-ocp4.14-lp-interop-images
     spec:
       containers:
