Fix ModelMesh-runtime-adaptor main branch pipeline

--- a/ci-operator/config/opendatahub-io/modelmesh-runtime-adapter/opendatahub-io-modelmesh-runtime-adapter-main.yaml
+++ b/ci-operator/config/opendatahub-io/modelmesh-runtime-adapter/opendatahub-io-modelmesh-runtime-adapter-main.yaml
@@ -5,7 +5,7 @@ base_images:
     tag: "8"
 build_root:
   project_image:
-    dockerfile_path: Dockerfile.develop
+    dockerfile_path: Dockerfile.develop.ci
 images:
 - build_args:
   - name: COMMIT_SHA
